# note-duel-backend

./: Cargo.toml
migrations/2024-01-15-232657_baseline/: down.sql  up.sql
src/: config.rs  listener.rs  main.rs  routes.rs  utils.rs
src/models/: bet.rs  mod.rs  schema.rs  sig.rs
