[package]
name = "note-duel-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "note-duel"
path = "src/main.rs"

[dependencies]
log = "=0.4.18"
pretty_env_logger = "0.5.0"
anyhow = "1.0"
axum = "0.6.20"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "numeric"] }
diesel_migrations = "2.1.0"
clap = { version = "4.1.17", features = ["derive"] }
futures = "0.3"
nostr = "0.26.2"
nostr-sdk = "0.26.1"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
urlencoding = "2.1.2"

[dev-dependencies]
dotenv = "0.15.0"
