[package]
name = "note-duel-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "note-duel"
path = "src/main.rs"

[dependencies]
log = "=0.4.18"
pretty_env_logger = "0.5.0"
anyhow = "1.0"
axum = "0.6.20"
base64 = "0.13.1"
bincode = "1.3.3"
clap = { version = "4.1.17", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
dlc = { git = "https://github.com/benthecarman/rust-dlc", branch = "mutiny", features = ["use-serde"] }
dlc-messages = { git = "https://github.com/benthecarman/rust-dlc", branch = "mutiny", features = ["use-serde"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "numeric", "serde_json"] }
diesel_migrations = "2.1.0"
futures = "0.3"
lightning = "0.0.118"
nostr = "0.27.0"
nostr-sdk = { version = "0.27.0", features = ["sqlite"] }
serde = "1.0"
serde_json = "1.0"
schnorr_fun = { version = "0.9.1", features = ["bincode", "serde"] }
sha2 = "0.10.8"
reqwest = "0.11.23"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
urlencoding = "2.1.2"

[dev-dependencies]
dotenv = "0.15.0"
